# yt-video-downloader

./: .gitignore  Cargo.toml  README.md  TODO.md  render.yaml  vercel.json
.cargo/: config.toml
client/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  ws-server.js
client/components/: DownloadHistory.tsx  Settings.tsx  ThemeToggle.tsx
client/pages/: index.tsx
client/pages/api/: download.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/layout/: Header.tsx  Sidebar.tsx
client/src/components/ui/: LoadingScreen.tsx
client/src/hooks/: useTheme.ts
client/src/pages/: DownloadPage.tsx  HomePage.tsx  SettingsPage.tsx
client/src/store/: appStore.ts
client/src/types/: index.ts
client/styles/: globals.css
src/: cleanup.rs  config.rs  dependencies.rs  downloader.rs  lib.rs  logger.rs  main.rs  refresh.rs  utils.rs  video_info.rs  video_manager.rs  wallpaper_manager.rs
